# sockudo-kv

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  OPTIMIZATION_TODO.md  README.md  bench_output.txt  bench_results.txt  cluster_test.sh  cluster_verifier.py  cmd.txt  cross_slot_test.sh  dump.rdb  node-7000.out  node-7001.out  node-7002.out  redis cluster.md  redis.conf  sentinel.conf  start_cluster.sh  test_users.acl  verify_hash.py  verify_hash_v2.py
.claude/: settings.local.json
examples/: sweep_repro.rs
redis-tests/: redis.conf
redis-tests/.github/workflows/: daily.yml
redis-tests/modules/vector-sets/: README.md  hnsw.c
redis-tests/src/: acl.c  aof.c  bitops.c  cluster_slot_stats.c  commands.def  config.c  db.c  debug.c  defrag.c  dict.c  expire.c  geo.c  hotkeys.c  hyperloglog.c  keymeta.c  kvstore.c  lazyfree.c  listpack.c  memory_prefetch.c  module.c  networking.c  object.c  quicklist.c  rdb.c  replication.c  server.c  server.h  sort.c  stream.h  t_hash.c  t_list.c  t_set.c  t_stream.c  t_string.c  t_zset.c
redis-tests/src/commands/: hotkeys-get.json  hotkeys-reset.json  hotkeys-start.json  hotkeys-stop.json
redis-tests/tests/: instances.tcl  test_helper.tcl
redis-tests/tests/integration/: replication.tcl
redis-tests/tests/support/: cluster.tcl  redis.tcl  response_transformers.tcl  server.tcl  test.tcl  util.tcl
redis-tests/tests/unit/: hotkeys.tcl  maxmemory.tcl  memefficiency.tcl  other.tcl
redis-tests/tests/unit/cluster/: atomic-slot-migration.tcl  slot-stats.tcl
redis-tests/tests/unit/moduleapi/: blockedclient.tcl
redis-tests/tests/unit/type/: hash-field-expire.tcl  string.tcl
src/: blocking.rs  cli.rs  client.rs  client_manager.rs  cluster_state.rs  config.rs  config_table.rs  cron.rs  error.rs  glob_trie.rs  kernel_tuning.rs  keyspace_notify.rs  lib.rs  logging.rs  lua_engine.rs  lzf.rs  main.rs  pattern.rs  persistence.rs  process_mgmt.rs  pubsub.rs  resp.rs  sentinel_main.rs  server_state.rs  tls.rs
src/cluster/: failover.rs  message.rs  mod.rs  persistence.rs  service.rs
src/commands/: bitmap.rs  blocking.rs  bloom.rs  cluster.rs  cms.rs  connection.rs  cuckoo.rs  generic.rs  geo.rs  hash.rs  hyperloglog.rs  json.rs  list.rs  mod.rs  pubsub.rs  scripting.rs  search.rs  server.rs  set.rs  sorted_set.rs  stream.rs  string.rs  tdigest.rs  timeseries.rs  topk.rs  transaction.rs  vector.rs
src/protocol/: mod.rs  parser.rs  types.rs
src/replication/: master.rs  mod.rs  rdb.rs  replica.rs
src/sentinel/: commands.rs  config.rs  config_parser.rs  discovery.rs  election.rs  events.rs  failover.rs  mod.rs  monitor.rs  network.rs  persistence.rs  scripts.rs  state.rs  tilt.rs
src/storage/: bench_ops.rs  bloomfilter.rs  bptree.rs  bptree_bench.rs  cms.rs  cuckoofilter.rs  dashtable.rs  eviction.rs  expiration_index.rs  hyperloglog.rs  intset.rs  listpack.rs  mod.rs  multi_store.rs  quicklist.rs  store.rs  tdigest.rs  timeseries.rs  topk.rs  types.rs  value.rs
src/storage/ops/: bitmap_ops.rs  bloom_ops.rs  cms_ops.rs  cuckoo_ops.rs  generic_ops.rs  geo_ops.rs  hash_ops.rs  hyperloglog_ops.rs  json_ops.rs  list_ops.rs  mod.rs  search_ops.rs  set_ops.rs  simd_distance.rs  sorted_set_ops.rs  stream_ops.rs  string_ops.rs  tdigest_ops.rs  timeseries_ops.rs  topk_ops.rs  vector_ops.rs
