[package]
name = "sockudo-kv"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "sync",
    "time",
    "signal",
] }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
thiserror = "2"
dashmap = "6"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
memchr = "2"
itoa = "1"
socket2 = { version = "0.6", features = ["all"] }
sonic-rs = "0.5"
fastrand = "2"
mlua = { version = "0.11", features = ["luajit", "serialize"] }
parking_lot = "0.12"
roaring = "0.11"
mimalloc = { version = "*", features = ["v3"] }
wide = "1"
rart = "0.2"
rayon = "1.10"
lru = "0.16"

# TLS Support
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "ring",
] }
rustls-pemfile = "2"
log = "0.4.29"
rand = "0.9.2"
env_logger = "0.11.8"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
