[package]
name = "sockudo-kv"
version = "1.0.0"
edition = "2024"
authors = ["Radu Diaconu <radu@sockudo.io>"]
description = "A high-performance Redis-compatible key-value store"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sockudo/sockudo-kv"

# Binary targets
# Following Redis model: both binaries use the same code and check argv[0]
[[bin]]
name = "sockudo-kv"
path = "src/main.rs"

[[bin]]
name = "sockudo-kv-server"
path = "src/main.rs"

[[bin]]
name = "sockudo-kv-sentinel"
path = "src/main.rs"

[features]
default = ["search", "json", "timeseries", "vector", "bloom"]
# Optional modules (like Redis modules)
search = []     # RediSearch-like full-text search
json = []       # RedisJSON-like JSON operations
timeseries = [] # RedisTimeSeries-like time-series data
vector = []     # Vector similarity search
bloom = []      # RedisBloom-like probabilistic data structures (BF, CF, TopK, CMS, TDigest)

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "sync",
    "time",
    "signal",
    "process",
] }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
thiserror = "2"
dashmap = "6"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
memchr = "2"
itoa = "1"
socket2 = { version = "0.6", features = ["all"] }
sonic-rs = "0.5"
fastrand = "2"
mlua = { version = "0.11", features = ["luajit", "serialize", "vendored"] }
parking_lot = "0.12"
roaring = "0.11"
mimalloc = { version = "*", features = ["v3"] }
wide = "1"
rart = "0.2"
rayon = "1.10"
lru = "0.16"

# TLS Support
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "ring",
] }
rustls-pemfile = "2"
log = "0.4.29"
rand = "0.9.2"
env_logger = "0.11.8"
hashbrown = "0.16.1"
crossbeam-utils = "0.8.21"
ahash = "0.8.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
itertools = "0.14.0"
x509-parser = "0.18.0"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }
base64 = "0.22.1"
libc = "0.2.180"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1

[dev-dependencies]
sweep-bptree = "0.4.0"
tempfile = "3.24.0"
